# xld

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  details.md  format.sh  load.js  memo.md
include/: input_file.h  input_fragment.h  output_elem.h  pass.h  section.h  symbol.h  wao.h  wasm.h  xld.h
include/common/: archive_file.h  common.h  file.h  filetype.h  integers.h  leb128.h  log.h  mmap.h  output_file.h  system.h
include/object/: wao_basic.h  wao_symbol.h  wasm_relocs.def
include/wasm/: object.h  symbol.h  utils.h
include/xld_private/: chunk.h  context.h  input_file.h  input_span.h  object_file.h  output_chunk.h  output_elem.h  symbol.h  wasm_object.h  wasm_relocs.def  wasm_symbol.h
src/: CMakeLists.txt  chunk.cc  input_file.cc  linker.cc  main.cc  output_elem.cc  parse_object.cc  pass.cc  symbol.cc  wasm_main.cc
src/common/: CMakeLists.txt  common.cc  file.cc  leb.cc
src/utils/: CMakeLists.txt
src/wasm/: CMakeLists.txt  main.cc
test/: allow_undefined.js  allow_undefined.sh  basic1.sh  basic2.sh  common.inc  data1.sh  export1.sh  global1.sh  global2.sh  init_func.sh  main.js  no_link1.sh  run.sh  synthetic_symbol.sh
